<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <TextView
        android:id="@+id/tSucursal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Wsucursal"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/etSucursal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tAplicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Waplicacion"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/etAplicacion"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wusuario"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tContra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wcontra"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/etContra"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tServidor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wservidor"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/etServidor"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tPuerto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wpuerto"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/etPuerto"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tDia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wentorno"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/etDia"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tConfiguracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wconfiguracion"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/etConfiguracion"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tEntorno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wdia"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/etEntorno"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tEstructura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Westructura"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/etEstructura"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tCartas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wcartas"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/etCartas"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tMovimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wmovimiento"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/etMovimiento"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#ffffff" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tEnvasesPrec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wenvasesprec"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/etEnvasesPrec"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#ffffff" />

    </LinearLayout>



    </LinearLayout>
